using System;

namespace POOII_Module04_SOLID_PreparationCours.ATM.Tiroir
{
    public interface ITiroirArgent
    {
        void DistribuerArgent(decimal p_montant);
    }
}